--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Justified gallery component for React.",
   "main": "lib/Gallery.js",
   "dependencies": {
-    "react-images": "^0.5.16",
-    "prop-types": "^15.5.8"
+    "gift": "^0.10.2",
+    "prop-types": "^15.5.8",
+    "react-images": "^0.5.16"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -14,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
+    "graceful-fs": "^4.2.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-beautify": "^2.0.0",
@@ -27,6 +29,9 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
+  },
+  "resolutions": {
+    "gift": "^0.10.2"
   },
   "repository": {
     "type": "git",
